--- a/src/components/small components/smallComponents.scss
+++ b/src/components/small components/smallComponents.scss
@@ -1,4 +1,6 @@
-
+.fab {
+	font-size: 30px;
+}
 
 .input-wrap {
 	width: 60vw;
@@ -7,32 +9,39 @@
 	flex-direction: column;
 	align-items: left;
 	position: relative;
-	margin-top: 16px;
+	margin-top: 20px;
 	margin-bottom: 25px;
 	input {
 		padding: 7px;
 		font-size: 16px;
 		border: none;
-		box-shadow: 0 0 15px 5px rgb(201, 201, 201);
+		box-shadow: 0 0 15px 5px rgb(189, 189, 189);
 		border-radius: 5px;
 	}
 	label {
 		font-size: 13px;
-		color: #cccccc;
+		color: #868686;
 		position: absolute;
 		pointer-events: none;
 		top: 9px;
 		left: 12px;
 		transition: all 0.2s ease;
 	}
-	input:focus ~ label,
-	input:not(:focus):valid ~ label {
+	.label-up,
+	input:focus ~ label {
 		top: -18px;
 		bottom: 0px;
 		left: 0px;
-		font-size: 14px;
+		font-size: 12px;
 		opacity: 1;
 		color: var(--primary);
+	}
+	.error-message {
+		display: none;
+		color: red;
+	}
+	input:not(:focus):invalid ~ .error-message {
+		display: block;
 	}
 }
 
