--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -1,10 +1,25 @@
 .product-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 1rem;
-    img {
-        width: 100%;
-        aspect-ratio: 1;
-    }
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-areas:
+		'img img'
+		'display display'
+		'price btn';
+	align-items: center;
+	padding: 1rem;
+	img {
+		width: 100%;
+		aspect-ratio: 1;
+		grid-area: img;
+	}
+	h4 {
+		grid-area: display;
+	}
+	p {
+		grid-area: price;
+	}
+	button {
+		grid-area: btn;
+        text-align: end;
+	}
 }
