--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -17,7 +17,7 @@ header {
 		height: var(--header-size);
 		background-color: var(--secondary);
 		position: relative;
-		box-shadow: 0 0 10px 5px grey;
+		box-shadow: 0 0 10px 5px #c6c6c7;
 		.navbar-nav {
 			max-width: 100%;
 			height: 100%;
