--- a/src/default.scss
+++ b/src/default.scss
@@ -1,5 +1,6 @@
 * {
 	--primary: #fc9003;
+	--footerSize: 2.5rem;
 }
 
 *,
@@ -33,4 +34,9 @@ button {
 	border: none;
 	outline: none;
 	background: transparent;
+}
+.main {
+	min-height: calc(100vh - var(--footerSize) - 50px);
+	position: relative;
+	padding-bottom: var(--footerSize);
 }
