--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,19 +1,23 @@
 .cart-container {
-    padding: 2rem;
-    text-align: center;
-    .flex {
+	padding: 2rem;
+	text-align: center;
+	.flex {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-        margin: 2rem 0;
-        text-align: start;
+		margin: 2rem 0;
+		text-align: start;
 	}
 	a {
 		padding: 0.8rem 1.5rem;
-        text-transform: uppercase;
+		text-transform: uppercase;
 		border: none;
 		border-radius: 5px;
 		color: white;
 		background-color: var(--primary);
+	}
+	.paypal-container {
+		position: relative;
+		z-index: 0;
 	}
 }
