--- a/src/pages/Products/products.scss
+++ b/src/pages/Products/products.scss
@@ -2,6 +2,7 @@
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
     grid-gap: 0.5rem;
+    padding-top: 1.4rem;
     .filters {
         grid-column-start: 1;
         grid-column-end: 3;
