--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -13,6 +13,10 @@ header {
 	right: 0;
 	max-width: 100%;
 	z-index: 5;
+	color: var(--primary);
+	a {
+		color: var(--primary);
+	}
 	.navbar {
 		height: var(--header-size);
 		background-color: var(--secondary);
@@ -30,6 +34,7 @@ header {
 				display: flex;
 				align-items: center;
 				justify-content: center;
+
 				.dropdown {
 					user-select: none;
 					background-color: var(--primary);
@@ -41,6 +46,13 @@ header {
 					padding: 1rem;
 					display: flex;
 					flex-direction: column;
+					li {
+						width: 100%;
+					}
+					.nav-item,
+					a {
+						color: black;
+					}
 					.menu-item {
 						height: calc(var(--header-size) * 0.7);
 						display: flex;
@@ -66,7 +78,6 @@ header {
 			}
 		}
 	}
-	
 }
 @media screen and (min-width: 700px) {
 	.fa-bars {
