--- a/src/components/productList/productList.scss
+++ b/src/components/productList/productList.scss
@@ -1,14 +1,20 @@
 .list-item {
 	display: grid;
 	grid-template-columns: 1fr 1.5fr;
-    align-items: center;
+	align-items: center;
 	grid-template-rows: 20vw;
-    margin: 2rem 0;
+	margin: 2rem 0;
 	img {
 		width: 20vw;
 		height: 20vw;
 	}
-    a {
-        margin: auto;
-    }
+	a {
+		margin: auto;
+	}
+	.quantity-container {
+		display: flex;
+		button {
+			margin: 0 1rem;
+		}
+	}
 }
