--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,7 +1,6 @@
 * {
 	--primary: #fc9003;
 	--secondary: rgb(28, 28, 28);
-	--header-size: 50px;
 	--border-radius: 7px;
 }
 
@@ -14,61 +13,40 @@ header {
 	max-width: 100%;
 	z-index: 5;
 	color: var(--primary);
+	font-size: 1rem;
 	a {
 		color: var(--primary);
+		user-select: none;
 	}
 	.navbar {
 		height: var(--header-size);
+		min-height: 50px;
 		background-color: var(--secondary);
 		position: relative;
-		box-shadow: 0 0 10px 5px #c6c6c7;
 		.navbar-nav {
 			max-width: 100%;
 			height: 100%;
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
+			span {
+				margin: 0 5px;
+			}
+			#store-name {
+				font-size: 1.5rem;
+			}
 			.nav-item {
 				position: relative;
-				width: calc(var(--header-size) * 1.5);
 				height: var(--header-size);
 				display: flex;
 				align-items: center;
 				justify-content: center;
-
 				.dropdown {
 					user-select: none;
-					background-color: var(--primary);
-					position: absolute;
-					top: var(--header-size);
-					left: 0;
-					width: 40vw;
-					height: 100vh;
-					padding: 1rem;
 					display: flex;
-					flex-direction: column;
 					li {
-						width: 100%;
+						width: fit-content;
 					}
-					.nav-item,
-					a {
-						color: black;
-					}
-					.menu-item {
-						height: calc(var(--header-size) * 0.7);
-						display: flex;
-						align-items: center;
-					}
-				}
-				.open-over {
-					background-color: var(--secondary);
-					width: 30vw;
-					top: var(--header-size);
-					left: 0;
-					position: absolute;
-					padding: 1rem;
-					border-radius: var(--border-radius);
-					display: flex;
-					flex-direction: column;
 				}
 			}
 			.logged-in {
@@ -79,8 +57,40 @@ header {
 		}
 	}
 }
+@media screen and (max-width: 699px) {
+	.nav-item {
+		.dropdown {
+			background-color: var(--primary);
+			position: absolute;
+			top: var(--header-size);
+			left: 0;
+			width: 40vw;
+			max-width: 200px;
+			height: 100vh;
+			padding: 1rem;
+			flex-direction: column;
+			.nav-item,
+			a {
+				color: black;
+			}
+		}
+	}
+}
 @media screen and (min-width: 700px) {
 	.fa-bars {
 		display: none;
+	}
+	.navbar-nav {
+		justify-content: end;
+	}
+	#store-name {
+		order: 1;
+		margin-right: auto;
+	}
+	#shop-link {
+		order: 3;
+	}
+	#burger-menu {
+		order: 2;
 	}
 }
