--- a/src/default.scss
+++ b/src/default.scss
@@ -1,6 +1,8 @@
 * {
 	--primary: #fc9003;
+	--primary-light: #ffa734;
 	--footerSize: 2.5rem;
+	--header-size: 3.5rem;
 }
 
 *,
@@ -18,7 +20,7 @@ body {
 }
 body {
 	min-height: 100%;
-	margin-top: 50px;
+	margin-top: var(--header-size);
 	font-family: 'Poppins', sans-serif;
 }
 a,
@@ -36,7 +38,23 @@ button {
 	background: transparent;
 }
 .main {
-	min-height: calc(100vh - var(--footerSize) - 50px);
+	min-height: calc(100vh - var(--footerSize) - var(--header-size));
 	position: relative;
 	padding-bottom: var(--footerSize);
+}
+
+@media screen and (min-width: 700px) {
+	html {
+		font-size: 16px;
+	}
+}
+@media screen and (min-width: 1200px) {
+	html {
+		font-size: 20px;
+	}
+}
+@media screen and (min-width: 1400px) {
+	html {
+		font-size: 24px;
+	}
 }
