--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,5 +3,10 @@ footer {
 	bottom: 0;
 	width: 100%;
 	height: 2.5rem;
-	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	a:visited {
+		color: aqua;
+	}
 }
