--- a/src/components/small components/smallComponents.scss
+++ b/src/components/small components/smallComponents.scss
@@ -4,7 +4,7 @@
 
 .input-wrap {
 	width: 60vw;
-	max-width: 300px;
+	max-width: 500px;
 	display: flex;
 	flex-direction: column;
 	align-items: left;
@@ -47,8 +47,13 @@
 
 .submit-btn {
 	padding: 0.8rem 1.5rem;
+	text-transform: uppercase;
 	border: none;
 	border-radius: 5px;
 	color: white;
 	background-color: var(--primary);
+	&:hover,
+	&:active {
+		background-color: #ffa734;
+	}
 }
