--- a/src/components/small components/productFilter.scss
+++ b/src/components/small components/productFilter.scss
@@ -3,8 +3,9 @@
 		border: none;
         background-color: #ecedef;
         padding: 0.5rem 2rem;
+		border-bottom: 2px solid transparent;
 		&:hover {
-			border-bottom: 1px solid red;
+			border-bottom-color: #fc9003;
 		}
 	}
 }
