--- a/src/components/productList/productList.scss
+++ b/src/components/productList/productList.scss
@@ -2,11 +2,11 @@
 	display: grid;
 	grid-template-columns: 1fr 1.5fr;
 	align-items: center;
-	grid-template-rows: 20vw;
 	margin: 2rem 0;
 	img {
-		width: 20vw;
-		height: 20vw;
+		width: 120px;
+		height: 120px;
+		object-fit: cover
 	}
 	a {
 		margin: auto;
