--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -6,7 +6,11 @@ footer {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	a:visited {
-		color: aqua;
+	background-color: rgba(0, 0, 0, 0.582);
+	a {
+		text-transform: capitalize;
+		font-size: 1rem; 
+		color: var(--primary);
 	}
+	
 }
