--- a/src/components/small components/smallComponents.scss
+++ b/src/components/small components/smallComponents.scss
@@ -4,13 +4,13 @@
 
 .input-wrap {
 	width: 60vw;
-	max-width: 500px;
+	max-width: 400px;
 	display: flex;
 	flex-direction: column;
 	align-items: left;
 	position: relative;
 	margin-top: 20px;
-	margin-bottom: 25px;
+	margin-bottom: 20px;
 	input {
 		padding: 7px;
 		font-size: 16px;
@@ -19,7 +19,7 @@
 		border-radius: 5px;
 	}
 	label {
-		font-size: 13px;
+		font-size: 0.7rem;
 		color: #868686;
 		position: absolute;
 		pointer-events: none;
@@ -52,6 +52,8 @@
 	border-radius: 5px;
 	color: white;
 	background-color: var(--primary);
+	font-size: 0.8rem;
+	font-family: 'Poppins', sans-serif;
 	&:hover,
 	&:active {
 		background-color: #ffa734;
