--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -1,11 +1,13 @@
 .cart-container {
 	padding: 2rem;
+	max-width: 800px;
+	margin: auto;
 	text-align: center;
 	.flex {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
-		margin: 2rem 0;
+		margin: 1rem 0;
 		text-align: start;
 	}
 	a {
