--- a/src/pages/productDetails/productDetails.scss
+++ b/src/pages/productDetails/productDetails.scss
@@ -1,8 +1,10 @@
 .product-grid {
-	padding: 1rem;
+	padding: 5vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	max-width: 1200px;
+	margin: auto;
 	img {
 		width: 100%;
 		max-width: 500px;
