--- a/src/pages/cart/cart.scss
+++ b/src/pages/cart/cart.scss
@@ -9,6 +9,9 @@
 		justify-content: space-between;
 		margin: 1rem 0;
 		text-align: start;
+		#total {
+			font-weight: 700;
+		}
 	}
 	a {
 		padding: 0.8rem 1.5rem;
