--- a/src/pages/productDetails/productDetails.scss
+++ b/src/pages/productDetails/productDetails.scss
@@ -5,9 +5,12 @@
 	align-items: center;
 	max-width: 1200px;
 	margin: auto;
+	h3 {
+		text-transform: capitalize;
+	}
 	img {
-		width: 100%;
-		max-width: 500px;
+		max-width: 100%;
+		max-height: 100%;
 		object-fit: cover;
 		margin: auto;
 	}
@@ -17,6 +20,9 @@
 		align-items: center;
 		width: calc(100% - 1.5rem);
 		margin: 1rem;
+		p {
+			font-size: 1.5rem;
+		}
 		button {
 			padding: 0.8rem 1.5rem;
 			border: none;
@@ -24,6 +30,14 @@
 			color: white;
 			text-transform: uppercase;
 			background-color: var(--primary);
+			a:visited {
+				color: white;
+			}
+			&:hover,
+			&:active {
+				transform: scale(1.1);
+				box-shadow: 0 5px 15px #ffa734;
+			}
 		}
 	}
 }
@@ -32,6 +46,7 @@
 	.product-grid {
 		display: grid;
 		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: 1vh 70vh;
 		grid-gap: 1rem;
 		align-items: center;
 		h1 {
